# metabolite_inference

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
core/: TCore.cpp  TExample.cpp  TExample.h  TMetaboliteCore.cpp  TMetaboliteCore.h  TMetabolitePrior.cpp  TMetabolitePrior.h  TMetaboliteTypes.h  TStorageY.h  TStorageYVector.h  TStorageZ.h  TTree.cpp  TTree.h
src/: TCore.h  TStorageY.h  TStorageYVector.h  TStorageZ.h  TStorageZVector.h  TTree.cpp  TTree.h
tests/: TExample_test.cpp  TStorageYVector_Tests.cpp  TStorageY_Tests.cpp  TStorageZVector_Tests.cpp  TStorageZ_Tests.cpp
